[package]
name = "stairlight"
version = "0.1.1"
authors = ["Sebastian Schildt <sebastian@frozenlight.de>"]
edition = "2018"

[dependencies]
serde_derive = "^1.0"
serde = "1.0.92"
serde_json = "1.0.39"
reqwest = "0.9.17"
log = "0.4.6"
simplelog = "0.5.3"
clap = {version = "2.33", features = ["yaml"]}
